SVN
---

XML:   Resolved issue CASTOR-1221 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for Java 5 enums during marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1221
       (Werner - 20070526)
       
XML:   Resolved issue CASTOR-1985 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Trace statements output only if in trace mode.
       Details: http://jira.codehaus.org/browse/CASTOR-1985
       (Werner - 20070524)
       
XML:   Resolved issue CASTOR-1850 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Refactored toString() method of XMLException.
       Details: http://jira.codehaus.org/browse/CASTOR-1850
       (Werner - 20070515)
       
XML:   Resolved issue CASTOR-1769 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added get-/setProperty() methods to (un-)Marshaller so that properties can be set programmatically.
       Details: http://jira.codehaus.org/browse/CASTOR-1769
       (Werner - 20070515)

XML:   Resolved issue CASTOR-1982 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with namespace processing in the context of substitution groups.
       Details: http://jira.codehaus.org/browse/CASTOR-1982
       (Werner - 20070514)

XML:   Resolved issue CASTOR-1981 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed a problem with the processing of substitution groups if sequence order validation enabled.
       Details: http://jira.codehaus.org/browse/CASTOR-1981
       (Werner - 20070514)

XML:   Resolved issue CASTOR-1971 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made org.exolab.castor.persists.spi.Identity implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-1971
       (Werner - 20070509)

XML:   Resolved issue CASTOR-1964 using contribution from Werner Guttmann [werner.guttmann@gmx.net]